# persona-ai-api

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt  run.txt
app/: main.py
app/api/routes/: persona.py
app/core/: config.py  prompts.py
app/models/: schemas.py
app/services/: llm_service.py
